[package]
name = "rs48"
version = "1.2.0"
edition = "2021"
description = "A game of 2048 that plays in the terminal as a TUI with a lot of configurability."
license = "GPL-3.0"
authors = ["JOLIMAITRE Matthieu <matthieu@imagevo.fr>"]
repository = "https://github.com/MajorBarnulf/rs48"
homepage = "https://github.com/MajorBarnulf/rs48"

[dependencies]
clap = { version = "3.2", features = ["derive"] }
rs48_lib = "1.2"
rand = "0.8"
